@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Update credit card regular expressions and update Quickpay gateway with tests for new cards [cody]
+#
 # * Add support for token based payments to PaymentExpress [Nik Wakelin]
 #
 # * Refactor default_currency to the base gateway class [cody]
